--- a/src/App.css
+++ b/src/App.css
@@ -595,6 +595,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  margin-top: 1rem;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
